Logo is optional

--- a/resoc-templates/basic01/content.html.mustache
+++ b/resoc-templates/basic01/content.html.mustache
@@ -6,7 +6,9 @@
       </h1>
     </div>
     <div class="footer">
+      {{#logoUrl}}
       <img class="logo" src="{{ logoUrl }}">
+      {{/logoUrl}}
       <h4 class="brand-name">
         {{ brandName }}
       </h4>
