--- a/resoc-templates/basic03/content.html.mustache
+++ b/resoc-templates/basic03/content.html.mustache
@@ -6,9 +6,11 @@
           {{ title }}
         </h1>  
       </div>
+      {{#logoUrl}}
       <div class="footer">
         <img class="logo" src="{{ logoUrl }}">
       </div>
+      {{/logoUrl}}
     </div>
   </div>
   </div>
