--- a/resoc-templates/basic04/content.html.mustache
+++ b/resoc-templates/basic04/content.html.mustache
@@ -4,7 +4,9 @@
       {{ title }}
     </h1>
     <div class="footer">
+      {{#logoUrl}}
       <img class="logo" src="{{ logoUrl }}">
+      {{/logoUrl}}
       <h4 class="brand-name">
         {{ brandName }}
       </h4>
