--- a/resoc-templates/basic02/content.html.mustache
+++ b/resoc-templates/basic02/content.html.mustache
@@ -5,9 +5,11 @@
         {{ title }}
       </h1>  
     </div>
+    {{#logoUrl}}
     <div class="footer">
       <img class="logo" src="{{ logoUrl }}">
     </div>
+    {{/logoUrl}}
   </div>
   </div>
 </div>
