fix social image

--- a/resoc-templates/sesf-card/content.html.mustache
+++ b/resoc-templates/sesf-card/content.html.mustache
@@ -8,7 +8,7 @@
   </main>
   <footer>
     <div class="author">
-      <img id="logo" src="{{author_picture}}" />
+      <!-- <img id="logo" src="{{author_picture}}" /> -->
       {{author}}
     </div>
     <img id="logo" src="img.png" />
